content hero added + span text color change + services-details page added

--- a/assets/scss/layout/_light-mode.scss
+++ b/assets/scss/layout/_light-mode.scss
@@ -390,7 +390,7 @@
 
 [data-theme="light"]{
     .hero-section-2 .hero-text .inner-text{
-        color: #f8f8f8;
+        color: #3F5AF3;
         .container-svg{
             display: none;
         }
