--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -197,7 +197,7 @@ START: Hero CSS
         bottom: 40px;
         left: 46.5%;
         transform: translateX(-50%);
-        text-transform: uppercase;
+        // text-transform: uppercase;
         width: 100%;
         text-align: center;
         @include flex-vertical-center;
