--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,11 +19,11 @@
 /**----------------------------------------
 START: Template Default CSS
 ----------------------------------------*/
-@import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-  --rr-ff-body: 'Plus Jakarta Sans', sans-serif;
-  --rr-ff-heading: 'Plus Jakarta Sans', serif;
-  --rr-ff-p: 'Plus Jakarta Sans', sans-serif;
+  --rr-ff-body: 'Montserrat', sans-serif;
+  --rr-ff-heading: 'Montserrat', serif;
+  --rr-ff-p: 'Montserrat', sans-serif;
   --rr-fw-normal: normal;
   --rr-fw-thin: 100;
   --rr-fw-elight: 200;
