--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,7 @@
 @forward "layout/about";
 @forward "layout/service";
 @forward "layout/faq";
-@forward "layout/test";
+@forward "layout/testi";
 @forward "layout/project";
 @forward "layout/blog";
 @forward "layout/sponsor";
