--- a/assets/scss/layout/_light-mode.scss
+++ b/assets/scss/layout/_light-mode.scss
@@ -35,7 +35,7 @@
 }
 
 [data-theme="light"]{
-    .header .primary-header-inner .header-right-wrap .header-right .sidebar-trigger{
+    .header .primary-header-inner .header-right-wrap .header-right .trigger{
         color: var(--rr-color-theme-primary);
         border: 1px solid var(--rr-color-grey-light);
         svg{
