--- a/assets/scss/utilities/_colors.scss
+++ b/assets/scss/utilities/_colors.scss
@@ -27,4 +27,8 @@ $colors: (
         "1": #1E2228,
         "light": #E4E4E4,
     ),
+    "button": (
+        "dark": #081a19,
+        "light": #3f5af3,
+    ),
 );
