--- a/assets/scss/layout/_about.scss
+++ b/assets/scss/layout/_about.scss
@@ -82,7 +82,7 @@ START: About CSS
                 transform: translateY(0px);
             }
             .img-shape{
-                background-color: #3F5AF3;
+                background-color: #51b1fd;
                 mix-blend-mode: multiply;
                 content: "";
                 width: 90px;
