--- a/assets/scss/layout/_blog.scss
+++ b/assets/scss/layout/_blog.scss
@@ -209,7 +209,7 @@ START: Blog CSS
             z-index: 1;
         }
         &:after{
-            background: linear-gradient(180deg, rgba(14, 32, 147, 0.7) 0%, #3F5AF3 88.88%);
+            background: linear-gradient(180deg, rgba(14, 32, 147, 0.7) 0%, #51b1fd 88.88%);
             mix-blend-mode: multiply;
             content: "";
             width: 100%;
