--- a/assets/scss/layout/_brand.scss
+++ b/assets/scss/layout/_brand.scss
@@ -37,7 +37,7 @@ START: Brand CSS
             position: relative;height: 100%;
             width: 100%;
             &:before{
-                background-color: #3F5AF3;
+                background-color: #51b1fd;
                 mix-blend-mode: multiply;
                 content: "";
                 width: 100%;
