--- a/assets/scss/layout/_cta.scss
+++ b/assets/scss/layout/_cta.scss
@@ -121,7 +121,7 @@ START: Cta CSS
         z-index: -1;
     }
     .overlay{
-        background: #3F5AF3;
+        background: #51b1fd;
         mix-blend-mode: multiply;
         transform: rotate(180deg);
         width: 100%;
@@ -209,7 +209,7 @@ START: Cta CSS
             left: 0;
         }
         .round-shape{
-            background: #3F5AF3;
+            background: #51b1fd;
             mix-blend-mode: multiply;
             position: absolute;
             top: 50%;
