--- a/assets/scss/layout/_project.scss
+++ b/assets/scss/layout/_project.scss
@@ -503,7 +503,7 @@ START: Project CSS
         z-index: 2;
     }
     &:after {
-        background: #3f5af3;
+        background: #51b1fd;
         mix-blend-mode: multiply;
         content: "";
         width: 100%;
