--- a/assets/scss/layout/_reward.scss
+++ b/assets/scss/layout/_reward.scss
@@ -43,7 +43,7 @@ START: Reward CSS
         opacity: 0;
         @include transition(all 0.4s ease-in-out);
         &:before{
-            background-color: #3F5AF3;
+            background-color: #51b1fd;
             mix-blend-mode: multiply;
             content: "";
             width: 100%;
