--- a/assets/scss/utilities/_colors.scss
+++ b/assets/scss/utilities/_colors.scss
@@ -12,7 +12,7 @@ $colors: (
         "body-light": #74787C,
     ),
     "theme": (
-        "primary": #3F5AF3,
+        "primary": #51b1fd,
         "secondary": #ffc226,
     ),
     "bg": (
@@ -29,6 +29,6 @@ $colors: (
     ),
     "button": (
         "dark": #081a19,
-        "light": #3f5af3,
+        "light": #51b1fd,
     ),
 );
