--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -109,7 +109,7 @@ START: Hero CSS
             font-size: 50px;
         }
         &:before{
-            background: linear-gradient(270deg, #3F5AF3 0%, transparent 100%);
+            background: linear-gradient(270deg, #51b1fd 0%, transparent 100%);
             content: "";
             width: 100%;
             height: 76%;
@@ -152,7 +152,7 @@ START: Hero CSS
             @include transition(all 0.3s ease-in-out);
         }
         &:before{
-            background-color: #3F5AF3;
+            background-color: #51b1fd;
             mix-blend-mode: multiply;
             content: "";
             width: 170px;
@@ -819,7 +819,7 @@ START: Hero CSS
     top: 0;
     left: 0;
     &:before{
-        background: #3F5AF3;
+        background: #51b1fd;
         mix-blend-mode: multiply;
         content: "";
         height: 100%;
