--- a/assets/scss/layout/_page-header.scss
+++ b/assets/scss/layout/_page-header.scss
@@ -55,7 +55,7 @@
                 line-height: 1.3em;
             }
             &:before{
-                background: linear-gradient(270deg, #3F5AF3 0%, transparent 100%);
+                background: linear-gradient(270deg, #51b1fd 0%, transparent 100%);
                 content: "";
                 width: 100%;
                 height: 76%;
