--- a/assets/scss/layout/_service.scss
+++ b/assets/scss/layout/_service.scss
@@ -158,7 +158,7 @@ START: Service CSS
                 @include transition(all 0.4s ease-in-out);
             }
             &:before{
-                background-color: #3F5AF3;
+                background-color: #51b1fd;
                 content: "";
                 mix-blend-mode: multiply;
                 width: 100%;
@@ -391,7 +391,7 @@ START: Service CSS
                 z-index: 1;
             }
             &:after{
-                background: radial-gradient(100% 100% at 50% 0%, rgba(63, 90, 243, 0) 0%, #3F5AF3 100%);
+                background: radial-gradient(100% 100% at 50% 0%, rgba(63, 90, 243, 0) 0%, #51b1fd 100%);
                 filter: blur(75px);
                 content: "";
                 width: 255px;
