--- a/assets/scss/layout/_team.scss
+++ b/assets/scss/layout/_team.scss
@@ -207,7 +207,7 @@ START: Team CSS
             filter: saturate(0.6);
         }
         &:before{
-            background: linear-gradient(180deg, rgba(14, 21, 64, 0) 0%, #3F5AF3 100%);
+            background: linear-gradient(180deg, rgba(14, 21, 64, 0) 0%, #51b1fd 100%);
             content: "";
             width: 100%;
             height: 100%;
