--- a/assets/scss/utilities/_colors.scss
+++ b/assets/scss/utilities/_colors.scss
@@ -9,7 +9,7 @@ $colors: (
     ),
     "text": (
         "body": #B0B2B7,
-        "body-light": #74787C,
+        "body-light": #081a19,
     ),
     "theme": (
         "primary": #51b1fd,
