--- a/assets/scss/layout/_light-mode.scss
+++ b/assets/scss/layout/_light-mode.scss
@@ -472,7 +472,7 @@
         background-image: inherit !important;
         .about-text{
             .mission{
-                color: #F8F8F8;
+                color: (--rr-color-bg-1);
             }
         }
     }
