--- a/assets/scss/layout/_light-mode.scss
+++ b/assets/scss/layout/_light-mode.scss
@@ -27,7 +27,7 @@
 
     .section-heading{
         .bg-text{
-            color: #f8f8f8;
+            color: (--rr-color-text-body);
             -webkit-text-stroke-width: 0.5px;
             -webkit-text-stroke-color: #E8E9EF;
         }
